ingress/deployment-mobile.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: mobile-httpd
  labels:
    app: mobile 
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: mobile
  template: 
    metadata:
      name: mobile-temp
      labels: 
        app: mobile 
    containers:
    - name: mobile-cont 
      image: httpd:latest 
      ports: 
      - containerPort: 80 
...
---
apiVersion: v1 
kind: Service 
metadata: 
  name: my-mobile-svc 
  labels: 
    app: mobile 
spec: 
  type: ClusterIP 
  selector: 
    app: mobile 
  ports: 
  - port: 80 
    targetPort: 80
