ingress/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host: a42a79564f9b24090a15335a891c39f1-2015223809.ap-southeast-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-home-svc 
            port:
              number: 80
      - path: /mobile
        pathType: Prefix
        backend:
          service:
            name: my-mobile-svc 
            port:
              number: 80
      - path: /laptop
        pathType: Prefix
        backend: 
          service: 
            name: my-laptop-svc 
            port: 
              number: 8080
