ingress/nlb-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: nginx-ingress 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  ingressClassName: nginx 
  rules: 
  - host: a595cea82f0264fb098faf584cbffaca-0dcfe5cddffe4f62.elb.ap-south-1.amazonaws.com 
    http: 
      paths: 
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: my-home-svc
            port: 
              number: 80 
      - path: /mobile 
        pathType: Prefix 
        backend: 
          service: 
            name: my-mobile-svc 
            port: 
              number: 80 
      - path: /laptop 
        pathType: Prefix 
        backend:  
          service:  
            name: my-laptop-svc 
            port:  
              number: 8080
